# arbeitszeit

./: --db  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Handbuch - Arbeitszeiterfassung.html  Installationsanleitung - Arbeitszeit.html  README.md  anlage_einhaltung_pflichtenheft.md  befehlsreferenz_arbeitszeit.md  config.toml.example  handbuch_application_layer.md  handbuch_arbeitszeit.html  handbuch_arbeitszeit.md  handbuch_arbeitszeit_print.html  handbuch_architektur.md  handbuch_audit.md  handbuch_domain_modell.md  handbuch_infrastructure.md  handbuch_installation.md  handbuch_overview.md  handbuch_presentation.md  handbuch_rollen_cli_ergaenzung_v1_0.md  installationsanleitung_arbeitszeit.html  installationsanleitung_arbeitszeit.md  markdownlint.json  pflichtenheft_arbeitszeit_v5.md  pflichtenheft_arbeitszeit_v6.md  pyproject.toml  regelwerk_arbeitszeit_v5.md  run_audit.sh  test_booking_loop.py
.claude/: CLAUDE_audit.md  claude.md  settings.json
.claude/audit/: CLAUDE_audit.md
.claude/rules/: CLAUDE_strict.md
docs/: SECURITY.md  anlage_einhaltung_pflichtenheft_v2.md  arbeitszeit_docs.css  pflichtenheft_arbeitszeit_v2.md  pflichtenheft_arbeitszeit_v4.md  regelwerk_arbeitszeit_v2.md  regelwerk_arbeitszeit_v3.md  verzeichnisstruktur_arbeitszeit.md
docs/01_normativ/: anlage_einhaltung_pflichtenheft.md  pflichtenheft_arbeitszeit.md  pflichtenheft_arbeitszeit_v6.md  regelwerk_arbeitszeit.md
docs/02_anwender/: handbuch.html  handbuch.md  handbuch_arbeitszeit.html  handbuch_arbeitszeit.md
docs/03_installation_technik/: befehlsreferenz.html  befehlsreferenz.md  befehlsreferenz_arbeitszeit.html  handbuch_rollen_cli_ergaenzung_v1_0.md  hardware.md  installationsanleitung.html  installationsanleitung.md  installationsanleitung_arbeitszeit.html  installationsanleitung_arbeitszeit.md
docs/04_betrieb/: betriebsdokumentation_arbeitszeit_v1_1.md  betriebsfreigabe_protokoll.md  handbuch_backup_restore.md  hardware_inbetriebnahme_protokoll.md  restore_checkliste.md  rollenzuweisung.md  rollenzuweisung_arbeitszeit_v1_0.md
docs/05_datenschutz_recht/: datenschutz_und_tom_arbeitszeit_v1_0.md  vvt_arbeitszeit_v1.md
docs/07_pruefberichte/: dokumentations_inventar.md
docs/08_planung_intern/: Umsetzungsplan_zu_2026-07-22_codebase-audit_gesamt.md  abschluss_rfid_umstellung.md  aenderungsanalyse.md  analyse_F4_F1_F2_F6_F7.md  analyse_F5.md  analyse_f8_rfid_read_timeout.md  analyse_f9_workscheduleversion.md  analyse_rfid_read_timeout.md  code_doku_abgleich_2026-07-23.md  code_doku_abgleich_2026-07-23b.md  code_doku_abgleich_2026-07-23c.md  doku_abgleich_2026-07-23.md  plan_admin_tui.md  planung_rfid.md  vorkommen_OpenPhaseConflictError.md
docs/09_diagramme/: architektur_gesamt.md  domain_architektur.md  infrastruktur_architektur.md  rfid_buchungsablauf.md  sequenz_read_next_buchung.md
docs/adr/: adr-cqrs-lesezugriff.md
docs/archive/: abarbeitung_hoch_abschlussnotiz_v1.md  audit_evidenzgrenzen_v1.md  betriebsdokumentation_arbeitszeit_v1.md  handbuch_arbeitszeit_v1.0.html  handbuch_arbeitszeit_v1.1.md  installationsanleitung_v1_4.md  migrationsuebersicht_notiz_v1.md  pflichtenheft_arbeitszeit_v3.md  pflichtenheft_arbeitszeit_v5.md  phase2_planung.md  phase3_planung.md  regelwerk_arbeitszeit_v3.md  regelwerk_arbeitszeit_v4.md
docs/audits/: 2026-07-22_codebase-audit_teil1-logikbrueche.md  audit_arbeitszeit_nachaudit_v1_2026-06-13.md   audit_bericht_arbeitszeit_phasen1bis5.md  coverage.xml
docs/betrieb/: aufbewahrungs_und_loeschkonzept_arbeitszeit_v1_0.md  backup_zeitplan_und_automatisierung.md  betriebsdokumentation_arbeitszeit_v1_1.md  betriebsfreigabe_protokoll.md  hardware_inbetriebnahme_protokoll.md  restore_checkliste.md  rollenzuweisung.md
docs/coding_jobs/: phase1_coding_job.md  phase1_planung_konkret.md  phase2_coding_job.md  phase2_planung_konkret.md  phase3_coding_job.md  phase3_planung_konkret.md  phase4_coding_job.md  phase4_planung_konkret.md  phase5_coding_job.md  phase5_planung_konkret.md
docs/datenschutz/: vvt_arbeitszeit_v1.md
docs/informelles/: ADR-002-cqrs-lesezugriff.md  abarbeitung_hoch_abschlussnotiz_v1.md  abarbeitung_mittel_abschlussnotiz_v1.md  abarbeitung_niedrig_abschlussnotiz_v1.md  adr_presentation_infrastructure_v1.md  audit_evidenzgrenzen_v1.md  betriebsdokumentation_arbeitszeit_v1.md  changelog_phase4_korrekturen.md  device_event_architekturentscheidung_v1.md  migrationsuebersicht_notiz_v1.md  phase1_coding_aufgabe.md  phase1_planung.md  phase2_coding_aufgabe.md  phase2_planung.md  phase3_coding_aufgabe.md  phase3_planung.md  phase4_coding_aufgabe.md  phase4_planung.md  phase5_coding_aufgabe.md  phase5_planung.md  planung_gesamt.md  planung_handbuch_aktualisierung.md  planung_hoch_v1_2026-06-11.md  planung_kritisch_v1_2026-06-11.md  planung_mittel_v1_2026-06-11.md  planung_niedrig_v1_2026-06-11.md  (+4 more)
migrations/: 0001_schema.sql  0002_seed_defaults.sql  0003_cleanup_booking_status.sql  0004_supplement_reject_fields_and_review_note.sql  0005_time_bookings_device_event_id.sql  0006_system_events_application_error.sql  0007_admin_rfid_cards.sql  0007_remove_numpad_grace_config.sql  0008_remove_booking_status_closed_with_note.sql  0009_audit_log_chain_hash.sql
scripts/: README_docs_pflege.md  backup.py  generate_audit_notes.py  init_db.py  run_docs_maintenance.sh  setup.py  show_config.py  verify_hardware.py
tests/: conftest.py  helpers.py  test_migrations.py
(+324 files in other folders)
