[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "arbeitszeit"
version = "0.1.0"
description = "Lokales Zeiterfassungssystem für eine Zahnarztpraxis"
requires-python = ">=3.14,<3.15"
dependencies = [
    "evdev>=1.7",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pypdf>=4.0",
    "ruff>=0.6",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "docs/audits/reports",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]  # Errors, Warnings, Imports, Bugbear
ignore = []

[tool.importlinter]
root_package = "arbeitszeit"
source_directories = ["src"]

[[tool.importlinter.contracts]]
name = "Clean Architecture - Layer-Abhaengigkeiten"
type = "layers"
layers = [
    "arbeitszeit.presentation",
    "arbeitszeit.infrastructure",
    "arbeitszeit.application",
    "arbeitszeit.domain",
]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
exclude = [
  '(^\.venv/)',
  '(^docs/audits/reports/)',
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--cov=arbeitszeit",
  "--cov-report=term-missing",
  "--cov-report=xml:docs/audits/reports/coverage.xml",
  "--cov-report=html:docs/audits/reports/htmlcov",
]

[tool.coverage.run]
branch = true
source = ["arbeitszeit"]

[tool.coverage.report]
show_missing = true
skip_covered = true