[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "arbeitszeit"
version = "0.1.0"
description = "Lokales Zeiterfassungssystem für eine Zahnarztpraxis"
requires-python = ">=3.14,<3.15"
dependencies = [
    "evdev>=1.7",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pypdf>=4.0",
    "ruff>=0.6",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Test & Coverage
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["arbeitszeit"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ---------------------------------------------------------------------------
# Code Quality
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "docs/audits/reports",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]  # Errors, Warnings, Imports, Bugbear
ignore = []

[tool.ruff.lint.per-file-ignores]
# sys.path-Manipulation vor Anwendungsimporten ist in diesem Einstiegspunkt bewusst
"src/arbeitszeit/presentation/admin_gui/main.py" = ["E402"]

# ---------------------------------------------------------------------------
# Type Checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
explicit_package_bases = true
strict = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
exclude = [
    '(^\.venv/)',
    '(^docs/audits/reports/)',
]

# ---------------------------------------------------------------------------
# Architecture
# ---------------------------------------------------------------------------

[tool.importlinter]
root_package = "arbeitszeit"
source_directories = ["src"]

[[tool.importlinter.contracts]]
name = "Clean Architecture - Layer-Abhaengigkeiten"
type = "layers"
layers = [
    "arbeitszeit.presentation",
    "arbeitszeit.infrastructure",
    "arbeitszeit.application",
    "arbeitszeit.domain",
]
